@@ -1,15 +1,12 @@
-package com.ub.higiea.infrastructure.adapters;
+package com.ub.higiea.infrastructure.adapters.route.calculator;
 
-import com.ub.higiea.application.utils.RouteCalculationResult;
-import com.ub.higiea.application.utils.RouteCalculator;
+import com.ub.higiea.application.ports.RouteCalculationResult;
+import com.ub.higiea.application.ports.RouteCalculator;
 import com.ub.higiea.domain.model.Location;
 import com.ub.higiea.domain.model.Sensor;
-import org.springframework.stereotype.Component;
 import reactor.core.publisher.Mono;
 
-import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class MockRouteCalculatorImpl implements RouteCalculator {
 
@@ -17,8 +14,7 @@ public class MockRouteCalculatorImpl implements RouteCalculator {
     public Mono<RouteCalculationResult> calculateRoute(Location depotBase,List<Sensor> sensors) {
 
         List<Sensor> orderedSensors = sensors.stream()
-                .sorted(Comparator.comparingLong(Sensor::getId))
-                .collect(Collectors.toList());
+                .toList();
 
 
         double totalDistance = 10.0;
